[project]
name = "kapruka-agent-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.6",
    "langchain-core>=1.4.1",
    "langchain-google-genai>=4.2.4",
    "langgraph>=1.2.4",
    "mcp>=1.27.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
